Fixed sponsers overlapping with header

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -180,7 +180,7 @@ a {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 40vh;
+	/* height: 40vh; */
 }
 
 @media screen and (max-width: 700px) {
